feat(econews): add new econews Backend API
