# models/index.js
@@ -1,11 +1,13 @@
 const sequelize = require('../config/database');
 const User = require('./user');
 const TesterApplication = require('./testerApplication');
+const EcoNewsBlog = require('./ecoNewsBlog');
 
 const db = {
   sequelize,
   User,
-  TesterApplication
+  TesterApplication,
+  EcoNewsBlog
 };
 
 // Define associations/relationships here if needed
